--- a/RV2015/intro.tex
+++ b/RV2015/intro.tex
@@ -21,7 +21,7 @@ safeguard that the last line of defense is actually effective.
 
 
 This paper documents our first efforts in incorporating formal
-verification of monitors with a RV framework.  The case study applies
+verification of monitors in a RV framework.  The case study applies
 our approach to the Copilot language, and framework initially
 developed at the National Institute of Aerospace and Galois Inc under
 a contract to NASA~\cite{copilot,pike-isse-13}.  Inspired by reports
