--- a/RV2015/paper.tex
+++ b/RV2015/paper.tex
@@ -103,25 +103,28 @@
 
 \begin{document}
 
-\title{Watching the Watchers } 
-\titlerunning{Watching the Watchers}  % abbreviated title (for running head)
+\title{Assuring the Guardians} 
+\titlerunning{Assuring the Guardians}  % abbreviated title (for running head)
 %                                     also used for the TOC unless
 %                                     \toctitle is used
 %
-\author{Jonathan Laurent\inst{1} \and Alwyn Goodloe\inst{2}
-}
+\author{Jonathan Laurent\inst{1} \and Alwyn Goodloe\inst{2} \and Lee
+  Pike\inst{3}
+ }
 %
 \authorrunning{Jonathan Laurent et al.} % abbreviated author list (for running head)
 %
 %%%% list of authors for the TOC (use if author list has to be
 %%%% modified)
-\tocauthor{Jonathan Laurent, and Alwyn Goodloe}
+\tocauthor{Jonathan Laurent, and Alwyn Goodloe, and Lee Pike}
 %
 \institute{\'{E}cole Normale Sup\'{e}rieure, Paris, France,\\
 \email{jonathan.laurent@ens.fr}, \and
 NASA Langley Research Center,
 Hampton, Virginia, USA, \\
-\email{a.goodloe@nasa.gov}}
+\email{a.goodloe@nasa.gov}, \and
+Galois, Inc., Portland, OR, USA\\ \email{leepike@galois.com}
+}
 
 \maketitle              % typeset the title of the contribution
 
