--- a/RV2015/Background.tex
+++ b/RV2015/Background.tex
@@ -1,4 +1,4 @@
-\section{Bakground on SMT-based $k-$induction}~\label{sec:background} 
+\section{Background on SMT-based $k-$induction}~\label{sec:background} 
 The focus of our  investigation has  been on applying model checking to  prove
 invariant properties of our monitors.   We  
 employ a powerful technique known as $k-$induction~\cite{Sheeran00,
