--- a/RV2015/paper.bib
+++ b/RV2015/paper.bib
@@ -1452,13 +1452,6 @@ month = {December}
  }
 
 
-@InProceedings{feldspar,
-  author = 	 {E. Axelsson and K. Claessen and G.  Dévai and Z.  Horváth and K.  Keijzer and B.  Lyckegård and A.  Persson and  M. Sheeran
-and J.  Svenningsson and A. Vajda},
-  title = 	 {{Feldspar:} A Domain Specific Language for Digital Signal Processing algorithms},
- booktitle = {8th ACM/IEEE Int. Conf. on Formal Methods and Models for Codesign},
- year = 	 {2010}
-}
 
 @Misc{scade,
    author = 	 {Esterel Technologies},
@@ -1754,4 +1747,42 @@ and J.  Svenningsson and A. Vajda},
   number = 	 {3},
   pages = 	 {175-205}
 }
+
+% --------- EDSL -----------
+
+@article{Gill:14:DSLs,
+  author = {Gill, Andy},
+  title = {Domain-specific Languages and Code Synthesis Using {H}askell},
+  journal = {Commun. ACM},
+  volume = {57},
+  number = {6},
+  month = {June},
+  year = {2014},
+  issn = {0001-0782},
+  pages = {42--49},
+  publisher = {ACM}
+}
+
+
+@InProceedings{feldspar,
+  author = 	 {E. Axelsson and K. Claessen and G.  Dévai and Z.  Horváth and K.  Keijzer and B.  Lyckegård and A.  Persson and  M. Sheeran
+and J.  Svenningsson and A. Vajda},
+  title = 	 {{Feldspar:} A Domain Specific Language for Digital Signal Processing algorithms},
+ booktitle = {8th ACM/IEEE Int. Conf. on Formal Methods and Models for Codesign},
+ year = 	 {2010}
+}
+
+@inproceedings{pike-plpv14,
+  author    = {Lee Pike and
+               Patrick C. Hickey and
+               James Bielman and
+               Trevor Elliott and
+               Thomas DuBuisson and
+               John Launchbury},
+  title     = {Programming languages for high-assurance autonomous vehicles: extended abstract},
+  booktitle = {Programming Languages meets Program Verification},
+  publisher = {ACM},
+  year      = {2014},
+  pages     = {1-2},
+  note =      {Available at \url{http://www.cs.indiana.edu/~lepike/pub_pages/plpv14.html}}}
 
