--- a/RV2015/intro.tex
+++ b/RV2015/intro.tex
@@ -11,7 +11,7 @@ behavior in order to be certified. As interest grows in techniques
 such as adaptive flight control and fully autonomous vehicles that
 utilize learning to adapt to unpredictable environments, RV may be a
 way to regain the necessary level of predictability required of
-ultra-critical systems~\cite{simplex}.  If monitors in ultra-critical
+ultra-critical systems.  If monitors in ultra-critical
 systems are to be the last line of defense, then we need to ensure
 they are correct. The work reported on here is part of a larger
 program aimed at creating a framework for \emph{high assurance RV}
