--- a/RV2015/paper.bib
+++ b/RV2015/paper.bib
@@ -489,7 +489,7 @@ OPTnote = {Available at \url{http://www-verimag.imag.fr/index.php?page=techrep-l
 @INPROCEEDINGS{Halbwachs93,
     author = {N. Halbwachs and F. Lagnier and P. Raymond},
     title = {Synchronous Observers and the Verification of Reactive Systems},
-    booktitle = {Third Innternational Conference on Algebraic Methodology and Software Technology},
+    booktitle = {Third International Conference on Algebraic Methodology and Software Technology},
     year = {1993},
     pages = {83--96},
     publisher = {Springer Verlag}
@@ -1535,6 +1535,19 @@ month = {December}
 }
 
 
+@inproceedings{Canovas-Dumas:2000,
+ author = {Canovas-Dumas, C{\'e}cile and Caspi, Paul},
+ title = {A PVS Proof Obligation Generator for Lustre Programs},
+ booktitle = {Proceedings of the 7th International Conference on Logic for Programming and Automated Reasoning},
+ series = {LPAR'00},
+ year = {2000},
+ isbn = {3-540-41285-9},
+ location = {Reunion Island, France},
+ pages = {179--188},
+ publisher = {Springer-Verlag}
+} 
+
+
 @inproceedings{Sheeran00,
  author = {M. Sheeran  and S. Singh  and G. St{\aa}lmarck },
  title = {Checking Safety Properties Using Induction and a {SAT}-Solver},
@@ -1783,6 +1796,6 @@ and J.  Svenningsson and A. Vajda},
   booktitle = {Programming Languages meets Program Verification},
   publisher = {ACM},
   year      = {2014},
-  pages     = {1-2},
-  note =      {Available at \url{http://www.cs.indiana.edu/~lepike/pub_pages/plpv14.html}}}
-
+  pages     = {1-2}
+}
+%  note =      {Available at \url{http://www.cs.indiana.edu/~lepike/pub_pages/plpv14.html}}
