Small changes and typos

--- a/RV2015/copilot-intro.tex
+++ b/RV2015/copilot-intro.tex
@@ -1,5 +1,5 @@
 \section{Copilot}~\label{sec:co-intro} 
-Copilot is a Domain Specific Language embedded in the functional
+Copilot is a Domain Specific Language embedded (eDSL)  in the functional
 programming language Haskell~\cite{Haskell98}   tailored to
 programming monitors for hard real-time, reactive systems. Given that
 Copilot is a deep embedding in Haskell, one must have a working
